<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.texttechnologylab</groupId>
    <artifactId>GerParCor</artifactId>
    <version>1.2</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <uima.version>3.5.0</uima.version>
        <utilities.version>8bfa54cbe4</utilities.version>
        <ttlab.typesystem.version>2f04defb08</ttlab.typesystem.version>
        <duui.version>7cef2433b5</duui.version>
        <dkpro.core.version>2.4.0</dkpro.core.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.nio=ALL-UNNAMED
                        --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                        <!-- add-opens for use in JUnit-Tests...-->
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.nio=ALL-UNNAMED
                        --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>

        </plugins>
    </build>


    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>central</id>
            <name>Maven Plugin Repository</name>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
<!--        <repository>-->
<!--            <id>ukp-oss-model-releases</id>-->
<!--            <url>http://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-model-releases-local</url>-->
<!--            <snapshots>-->
<!--                <enabled>false</enabled>-->
<!--            </snapshots>-->
<!--        </repository>-->
    </repositories>

    <dependencies>

        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>uimaj-core</artifactId>
            <version>${uima.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>uimafit-core</artifactId>
            <version>${uima.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.texttechnologylab</groupId>
            <artifactId>UIMATypeSystem</artifactId>
            <version>${ttlab.typesystem.version}</version>
            <!--            <scope>jar</scope>-->
            <exclusions>
                <exclusion>
                    <groupId>com.github.maven-download-plugin</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongo-java-driver</artifactId>
            <version>3.12.11</version>
        </dependency>

        <dependency>
            <groupId>com.sparkjava</groupId>
            <artifactId>spark-core</artifactId>
            <version>2.9.4</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.sparkjava</groupId>
            <artifactId>spark-template-freemarker</artifactId>
            <version>2.7.1</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.github.texttechnologylab</groupId>
            <artifactId>DockerUnifiedUIMAInterface</artifactId>
            <version>${duui.version}</version>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>com.github.texttechnologylab</groupId>-->
<!--            <artifactId>UIMADatabaseInterface</artifactId>-->
<!--            <version>3634ac3be3</version>-->
<!--        </dependency>-->

        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>


        <dependency>
            <groupId>xerces</groupId>
            <artifactId>xercesImpl</artifactId>
            <version>2.12.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.6</version>
        </dependency>

        <dependency>
            <groupId>com.github.texttechnologylab</groupId>
            <artifactId>Utilities</artifactId>
            <version>${utilities.version}</version>
        </dependency>



        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.14.2</version>
        </dependency>

        <dependency>
            <groupId>org.codehaus.plexus</groupId>
            <artifactId>plexus-utils</artifactId>
            <version>2.0.6</version>
        </dependency>

        <dependency>
            <groupId>com.google.api-client</groupId>
            <artifactId>google-api-client</artifactId>
            <version>1.30.9</version>
        </dependency>

        <dependency>
            <groupId>io.azam.ulidj</groupId>
            <artifactId>ulidj</artifactId>
            <version>1.0.4</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.dkpro.core/dkpro-core-tokit-asl -->
        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-tokit-asl</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.dkpro.core/dkpro-core-api-segmentation-asl -->
        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-api-segmentation-asl</artifactId>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.dkpro.core/dkpro-core-opennlp-asl -->
        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-opennlp-asl</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.dkpro.core/dkpro-core-api-io-asl -->
        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-api-io-asl</artifactId>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.dkpro.core/dkpro-core-io-xmi-asl -->
        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-io-xmi-asl</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.dkpro.core/dkpro-core-io-text-asl -->
        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-io-text-asl</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.dkpro.core/dkpro-core-api-resources-asl -->
        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-api-resources-asl</artifactId>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.dkpro.core/dkpro-core-tokit-asl -->
        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-tokit-asl</artifactId>
            <scope>test</scope>
        </dependency>


    </dependencies>

    <dependencyManagement>
    <dependencies>
    <dependency>
        <groupId>org.dkpro.core</groupId>
        <artifactId>dkpro-core-asl</artifactId>
        <version>${dkpro.core.version}</version>
        <type>pom</type>
        <scope>import</scope>
    </dependency>
    </dependencies>
    </dependencyManagement>
</project>
